--- a/GeekShopping.Web/Views/Home/Index.cshtml
+++ b/GeekShopping.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductModel>
+﻿@model IEnumerable<ProductViewModel>
 <form>
     <div class="container row">
         @foreach(var product in Model)
@@ -6,7 +6,7 @@
             <div class="col-4">
                 <div class="p-0 my-3 border">
                     <div class="card">
-                        <img src="@product.ImageUrl" class="card-img-top"/>
+                        <img src="@product.ImageURL" class="card-img-top"/>
                         <div class="card-body">
                             <h3 class="card-title text-success">
                                 @product.SubstringName()
