--- a/GeekShopping.Web/Views/Product/ProductCreate.cshtml
+++ b/GeekShopping.Web/Views/Product/ProductCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductModel
+﻿@model ProductViewModel
 
 <form asp-action="ProductCreate"> 
     <br/>
@@ -35,11 +35,11 @@
             </div>
 
             <div class="col-2">
-                <label asp-for="ImageUrl" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="ImageURL" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <input asp-for="ImageURL" class="form-control" />
+                <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
 
             <div class="col-2">
