--- a/GeekShopping.Web/Views/Product/ProductDelete.cshtml
+++ b/GeekShopping.Web/Views/Product/ProductDelete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductModel
+﻿@model ProductViewModel
 
 <form asp-action="ProductDelete"> 
     <input asp-for="Id" hidden />
@@ -32,10 +32,10 @@
             </div>
 
             <div class="col-2">
-                <label asp-for="ImageUrl" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="ImageURL" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="ImageUrl" disabled class="form-control" />
+                <input asp-for="ImageURL" disabled class="form-control" />
             </div>
 
             <div class="col-2">
