--- a/GeekShopping.Web/Views/Home/Details.cshtml
+++ b/GeekShopping.Web/Views/Home/Details.cshtml
@@ -42,7 +42,7 @@
             </div>
             <div class="card-footer row">
                 <div class="col-12 col-md-6 pb-1">
-                    <a class="btn btn-success btn-square btn-lg form-control" style="height:50px;">
+                    <a asp-action="Index" asp-controller="Home" class="btn btn-success btn-square btn-lg form-control" style="height:50px;">
                         Back to List
                     </a>
                 </div>
