--- a/GeekShopping.Web/Views/Cart/CartIndex.cshtml
+++ b/GeekShopping.Web/Views/Cart/CartIndex.cshtml
@@ -99,7 +99,14 @@
                                     Purchase Amount: @string.Format("{0:c}", Model.CartHeader.PurchaseAmount)
                                     <br />
                                 </span>
-                            </div>
+                                @if(Model.CartHeader.DiscountAmount > 0)
+                                {
+                                    <span class="text-success" >
+                                        Discount Amount: @string.Format("{0:c}", Model.CartHeader.DiscountAmount)
+                                        <br />
+                                    </span>
+                                }
+                        </div>
                         </div>
                     
                     <div class="card-footer row">
